[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/GUI/LabelWithHighlight.gd" type="Script" id=1]
[ext_resource path="res://src/GUI/BasicButton.gd" type="Script" id=2]

[node name="Button" type="TextureButton"]
margin_right = 40.0
margin_bottom = 13.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
button_type = 1
text = "CAN DO"

[node name="shadow" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
mouse_filter = 2
color = Color( 0.0470588, 0.0313726, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contour" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0470588, 0.0313726, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="ColorRect" parent="contour"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -0.832956
rect_clip_content = true
mouse_filter = 2
color = Color( 0.0431373, 0.168627, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="contour/color"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.5
margin_top = -4.0
margin_right = 15.5
margin_bottom = 4.0
custom_colors/font_color = Color( 0.0470588, 0.0313726, 0.0901961, 1 )
text = "CAN DO"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highlight" type="ColorRect" parent="contour/color/label"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = -1.0
mouse_filter = 2
color = Color( 1, 0.933333, 0.513726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Label" parent="contour/color/label"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
custom_colors/font_color = Color( 1, 0.933333, 0.513726, 1 )
text = "CAN DO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="Label" parent="contour/color/label"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
custom_colors/font_color = Color( 1, 0.933333, 0.513726, 1 )
text = "CAN DO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Label" parent="contour/color/label"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
custom_colors/font_color = Color( 1, 0.933333, 0.513726, 1 )
text = "CAN DO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="Label" parent="contour/color/label"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
custom_colors/font_color = Color( 1, 0.933333, 0.513726, 1 )
text = "CAN DO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
